fixed chat room not appearing when starting on mobile

--- a/styles.css
+++ b/styles.css
@@ -176,7 +176,7 @@ button {
     background-color: rgba(0, 0, 0, 0.85);
     overflow: hidden;
     width: 40%;
-/*    height: 100%;*/
+    height: 100%;
     position: relative;
     pointer-events: all;
 
